feat(project): implement pagination for project listing and add project detail response DTOs